--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
     background: linear-gradient(258deg, rgb(216, 147, 147) 0%, rgb(244, 194, 194) 77%);
     height: 100vh;
     font-family: "Roboto", sans-serif;
+    color: black;
 }
 
 .container {
@@ -30,6 +31,7 @@ body {
     background: rgb(128, 106, 113);
     box-shadow: 3px 10px 23px 2px rgba(0,0,0,0.44);
     border: 4px solid rgba(7, 15, 19, 0.619);
+    color: black;
 
 }
 
